Work on SitesController, introduce ProfileController, update swagger schema
